# spider

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yaml
browser/: .gitignore  index.js  package.json
spider/: README.md  __init__.py  connection.py  main.py  page.py  spider.py  storage.py  url_set.py  valkey_storage.py
tests/: test_spider.py
