[project]
name = "spider"
version = "0.2.2"
authors = [{ name="Erhan Gundogan", email="erhan.gundogan@gmail.com" }]
description = "Simple crawler to scrap web pages"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/erhangundogan/spider"

[tool.ruff]
lint.fixable = ["ALL"]
